--- a/statistics/21/bhv3_gd.html
+++ b/statistics/21/bhv3_gd.html
@@ -219,7 +219,7 @@ function init() {
     <tr class="none">
   <td class="name">Meli</td>
   <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
-  <td class="right">0</td><td class="right">0</td>
+  <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
   <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
   <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
   <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
@@ -227,27 +227,27 @@ function init() {
   <td class="right sum">0</td><td class="right sum">0</td>
   <td class="right sum">0</td><td class="right sumQ">0,000</td>
 </tr>
-<tr class="plus">
+<tr class="none">
   <td class="name">Lari</td>
   <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
   <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
   <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
-  <td class="right">1</td><td class="right">0</td>
-  <td class="right">0</td><td class="right">0</td>
+  <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
+  <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
   <td>&nbsp;</td>
-  <td class="right sum">1</td><td class="right sum">0</td>
-  <td class="right sum">1</td><td class="right sumQ">MAX</td>
+  <td class="right sum">0</td><td class="right sum">0</td>
+  <td class="right sum">0</td><td class="right sumQ">0,000</td>
 </tr>
-<tr class="minus">
+<tr class="none">
   <td class="name">Jojo</td>
-  <td class="right">1</td><td class="right">1</td>
-  <td class="right">0</td><td class="right">1</td>
-  <td class="right">0</td><td class="right">3</td>
-  <td class="right">0</td><td class="right">0</td>
-  <td class="right">0</td><td class="right">0</td>
+  <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
+  <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
+  <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
+  <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
+  <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
   <td>&nbsp;</td>
-  <td class="right sum">1</td><td class="right sum">5</td>
-  <td class="right sum">-4</td><td class="right sumQ">0,200</td>
+  <td class="right sum">0</td><td class="right sum">0</td>
+  <td class="right sum">0</td><td class="right sumQ">0,000</td>
 </tr>
 <tr class="none">
   <td class="name">Yassi</td>
@@ -260,44 +260,44 @@ function init() {
   <td class="right sum">0</td><td class="right sum">0</td>
   <td class="right sum">0</td><td class="right sumQ">0,000</td>
 </tr>
-<tr class="minus">
+<tr class="none">
   <td class="name">Julia</td>
-  <td class="right">0</td><td class="right">0</td>
-  <td class="right">0</td><td class="right">1</td>
-  <td class="right">0</td><td class="right">1</td>
-  <td class="right">0</td><td class="right">0</td>
-  <td class="right">0</td><td class="right">1</td>
+  <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
+  <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
+  <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
+  <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
+  <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
   <td>&nbsp;</td>
-  <td class="right sum">0</td><td class="right sum">3</td>
-  <td class="right sum">-3</td><td class="right sumQ">0,000</td>
+  <td class="right sum">0</td><td class="right sum">0</td>
+  <td class="right sum">0</td><td class="right sumQ">0,000</td>
 </tr>
-<tr class="plus">
+<tr class="none">
   <td class="name">Seli</td>
-  <td class="right">8</td><td class="right">1</td>
-  <td class="right">2</td><td class="right">1</td>
-  <td class="right">1</td><td class="right">0</td>
-  <td class="right">4</td><td class="right">1</td>
-  <td class="right">2</td><td class="right">0</td>
+  <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
+  <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
+  <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
+  <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
+  <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
   <td>&nbsp;</td>
-  <td class="right sum">17</td><td class="right sum">3</td>
-  <td class="right sum">14</td><td class="right sumQ">5,667</td>
+  <td class="right sum">0</td><td class="right sum">0</td>
+  <td class="right sum">0</td><td class="right sumQ">0,000</td>
 </tr>
-<tr class="plus">
+<tr class="none">
   <td class="name">Anna</td>
-  <td class="right">2</td><td class="right">0</td>
-  <td class="right">2</td><td class="right">0</td>
-  <td class="right">2</td><td class="right">0</td>
-  <td class="right">0</td><td class="right">3</td>
-  <td class="right">1</td><td class="right">1</td>
+  <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
+  <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
+  <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
+  <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
+  <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
   <td>&nbsp;</td>
-  <td class="right sum">7</td><td class="right sum">4</td>
-  <td class="right sum">3</td><td class="right sumQ">1,750</td>
+  <td class="right sum">0</td><td class="right sum">0</td>
+  <td class="right sum">0</td><td class="right sumQ">0,000</td>
 </tr>
 <tr class="none">
   <td class="name">Elena</td>
   <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
-  <td class="right">0</td><td class="right">0</td>
-  <td class="right">0</td><td class="right">0</td>
+  <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
+  <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
   <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
   <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
   <td>&nbsp;</td>
