--- a/presence.html
+++ b/presence.html
@@ -230,6 +230,11 @@ span.smaller {
   font-size: 0.5em;
   font-weight: inherit;
 }
+span.smallerblock {
+  background: inherit;
+  font-size: 0.75em;
+  font-weight: inherit;
+}
 /* -- training info -------------------------------------------------------- */
 div#training_info {
   position: absolute;
