connect video feedback

--- a/ov.html
+++ b/ov.html
@@ -188,7 +188,7 @@ function init() {
     'br2_21': ['schedule_br2g_21', 'results_br2g_21', 'statistics_br2g_21', 'standings_br2g_21', 'players_br2g_21'],
     'br1_21': ['herzhirn_21', 'training_a', 'tagebuch_a', 'system1',
                'schedule_br1g_21', 'results_br1g_21', 'statistics_br1g_21', 'standings_br1g_21', 'players_br1g_21',
-               'zeiten_a', 'heimtraining'],
+               'zeiten_a', 'heimtraining', 'videofeedback'],
 
     // 'archive': ...
     // 'a19': ...
@@ -447,6 +447,7 @@ function removeClass(elem, clazz) {
 
         <a id="zeiten_a" href="/training/zeiten_a.html" class="locked_1"><h3>Trainingszeiten</h3></a>
         <a id="heimtraining" href="/training/heimtraining.html" class="locked_1"><h3>Heimtraining</h3></a>
+        <a id="videofeedback" href="/videofeedback" class="locked_1"><h3>Videofeedback</h3></a>
       </div>
     </div>
 
