--- a/ov.html
+++ b/ov.html
@@ -446,7 +446,7 @@ function removeClass(elem, clazz) {
         <a id="players_br1g_21" href="players.html?key=br1g_21"><h3>Spielerinnen</h3></a>
 
         <a id="zeiten_a" href="/training/zeiten_a.html" class="locked_1"><h3>Trainingszeiten</h3></a>
-        <a id="heimtraining" href="/training/heimtraining.html" class="locked_1"><h3>Heimtraining</h3></a>
+        <a id="heimtraining" href="/training/heimtraining.html" class="locked_1"><h3>Heimtraining II</h3></a>
         <a id="videofeedback" href="/videofeedback" class="locked_1"><h3>Videofeedback</h3></a>
       </div>
     </div>
