--- a/training/heimtraining.html
+++ b/training/heimtraining.html
@@ -9,19 +9,42 @@ p {
   font-size: 2.5em;
   text-align: left;
   line-height: 130%;
-  padding-bottom: 0.5em;
+  padding: 0 0 0.5em 0.5em;
 }
 b {
   font-size: 1em;
 }
-div.h1, div.h2 {
+div.h1, div.h2, div.h3 {
   font-size: 4em;
   font-weight: bold;
   text-align: left;
   padding-bottom: 0.5em;
 }
 div.h2 {
+  padding-top: 0.5em;
   font-size: 3.2em;
+}
+div.h3 {
+  font-size: 2.8em;
+}
+table.ov, table.ov tr, table.ov tr > th, table.ov tr > td {
+  font-size: 1.5em;
+  text-align: left;
+  line-height: 130%;
+}
+table.ov tr > th, table.ov tr > td {
+  padding: 4px 5px 4px 5px;
+}
+table.ov tr > th {
+  font-weight: bold;
+  background-color: lightgray;
+}
+
+table.ov tr:nth-of-type(2n) > td {
+  background-color: #F7F7F7;
+}
+table.ov tr:nth-of-type(2n + 1) > td {
+  background-color: #EEE;
 }
 </style>
 </head>
@@ -29,38 +52,53 @@ div.h2 {
 <div id="header">
   <div class="left">
   <a href="/ov.html#heimtraining"><img src="/image/bhv1.gif"/></a>
-  <div>Heimtraining</div>
+  <div>Heimtraining II</div>
   </div><div class="right">
   <a href="/ov.html#heimtraining"><img src="/image/bhv1.gif"/></a>
   </div>
 </div>
 
 <div id="content_container">
-<div class="h1">Heimtraining</div>
+<div class="h1">Heimtraining II</div>
+
+<table class="ov" cellpadding="0" cellspacing="0">
+  <tr><th>Mo</th><th>Di</th><th>Do</th><th>Fr</th><th>&nbsp;</th></tr>
+  <tr><td colspan="4">Aufwärmen - Laufen, Radfahren + Laufen auf Linie</td><td>20min</td></tr>
+  <tr><td>Jonglieren</td><td>Balancieren</td><td>Jonglieren</td><td>Balancieren</td><td>10min</td></tr>
+  <tr><td>Kräftigung 1</td><td>Kräftigung 2</td><td>Kräftigung 1</td><td>Kräftigung 2</td><td>20min</td></tr>
+  <tr><td colspan="4">Technik: Angriff - Wurf, Grundtechnik - Pritschen + Baggern</td><td>2x15min</td></tr>
+  <tr><td colspan="4">Abschluss - Laufen, Radfahren</td><td>25min</td></tr>
+  <tr><td colspan="4">Beobachten und Bewerten</td><td>15-30min</td></tr>
+</table>
+<br><br>
 
 <div class="h2">Einleitung</div>
-<p>15min Radfahren, Schwimmen, ev. Laufen</p>
+<p>Radfahren, Laufen, Heimtrainer, dazu Laufen auf Linie(siehe Geschicklichkeit)</p>
 
-<div class="h2">Kräftigung - 5 x 20 x 11 oder 4 x 25 x 11</div>
+<div class="h2">Kräftigung</div>
+<div class="h3">1. Theraband mit Jenny</div>
+
+<div class="h3">2. Kräftigung 2x 11 x 20 (ähnlich wie bisher)</div>
 
 <p><b>(Damen-)Liegestütz</b><br>
 gestreckter Körper<br>
-jeden 5. auf den Fingern, Aufspielerinnen jeden 2.<br>
+tw. auf Ball, tw. auf den Fingern<br>
 <b>Sit-Ups</b><br>
-untere Rücken bleibt immer am Boden,
-<br>Schulterblätter immer in der Luft<br>
+untere Rücken bleibt immer am Boden,<br>
+Schulterblätter immer in der Luft<br>
 <b>Back-Ups (Oberkörper heben)</b><br>
 Langsam, ruhige Beine,<br>
 Schulter bleiben in der Luft (nicht hinlegen)<br>
 <b>Liegestütz rückwärts</b><br>
-Hintern ruhig, Ellbogen abbiegen</p>
+Hintern ruhig, Ellbogen abbiegen, auch auf den Fingern versuchen</p>
 
 <p><b>Kniebeugen</b><br>
-Ferse am Boden, Knie bleiben hinter den Zehen, 90° Kniewinkel ist genug<br>
-(keine Tiefkniebeugen)<br>
-<b>Blocksprünge</b><br>
-nach Seitwärtsbewegung - 3 Schritte (Öffnen, langer Schritt, …)
-<br>Landung am Absprungort!<br>
+Ferse am Boden, Knie bleiben hinter den Zehen, 90° Kniewinkel ist genug (keine Tiefkniebeugen)<br>
+immer auf weichem Untergrund: Polster, Teppich, Decke, alter umgedrehter Schuh (ev. Tennisball im Schuh)<br>
+tw. einbeinig, tw. mit geschlossenen Augen<br>
+<b>Blocksprünge als Hock-Wechsel-Sprünge</b><br>
+Liegestützstellung - Anhocken - Blocksprung - Hocke - Liegestützstellung<br>
+bes. Vorsicht bei der Armführung zum Block: zuerst die Finger nach oben, dann erst Sprung mit ruhiger Armstreckung (kein Schlagen)<br>
 <b>Oberschenkelrückseite (Beckenlift - Hinternheber)</b><br>
 gestrecktes Bein bleibt ruhig<br>
 (keine Klappmesser!)</p>
@@ -72,10 +110,33 @@ langsam zählen, oder Timer am Handy</p>
 <p><b>Alle, die spezielle Übungen haben, ersetzen Teile oder Alles durch diese Übungen!<br>
 (mit Trainer absprechen)</b></p>
 
-<div class="h2">Abschluss</div>
-<p>20min Radfahren, Schwimmen, ev. Laufen</p>
-</div>
+<div class="h2">Technik</div>
+<div class="h3">Angriff -&gt; Tennisballwurf</div>
+<p>indirekt geg. Mauer (Boden, Mauer), Abbpraller fangen, falls nicht möglich - Plane/Leintuch/… vom Balkon hängen und dagegen werfen<br>
+Armschwung nach oben(Stirnhöhe)<br>
+linke Hand zielt<br>
+rechte Hand nach außen drehen, und mit hohem Ellebogen zurückführen, dabei ein Schritt nach vorne(links)<br>
+linke Hand fällt zum rechten Oberschenkel<br>
+rechte Hand wirft und fällt zum linken Oberschenkel, rechter Fuss kann etwas nachgezogen werden, muss aber hinten bleiben</p>
 
+<div class="h3">gegenseitiges Beobachten</div>
+<p>jedes Training einige Würfe mit dem Handy aufnehmen, einen Wurf auswählen und vor dem Trainingstermin(19:00) in die Gruppe schicken<br>
+um 19:00 sollte jede die Würfe der anderen anschauen und bewerten<br>
+ab 19:30 die Bewertungen in die Gruppe schicken und vergleichen, von mir kommt dann auch ein Kommentar<br>
+3 Dinge beschreiben, die positiv auffallen + ein Vorschlag, was und wenn möglich wie es besser gemacht werden kann<br>
+Alles, was an Videos in die Gruppe kommt, muss auch dort bleiben -&gt; niemand darf ein Video weiterschicken oder herumzeigen!<br>
+Ausnahme: bei Minderjährigen haben Eltern das Recht am Handy nachzuschauen, was dort drauf ist.</p>
+
+<div class="h3">Pritschen und Baggern geg. Mauer</div>
+<p>(einige dürfen auch paarweise oder zu dritt spielen)<br>
+jedes Training 15min Grundtechnik<br>
+<b>Aufspielerinnnen:</b> Schwerpunkt Daumen<br>
+<b>Pritschen:</b> kurz mit einem schwereren Ball (Fussball, Basketball, sehr leichter Medizinball - max 1kg, besser leichter)<br>
+<b>Bagger:</b> Schwerpunkt ruhige Arme(kurz einen zweiten Ball unter das Kinn klemmen), sonst mit ruhigen Armen den Ball geg. die Mauer 'schieben'</p>
+
+<div class="h2">Abschluss</div>
+<p>Radfahren, Laufen, Heimtrainer</p>
+</div>
 <div id="footer">Brückl Hotvolleys<div>Brückl Hotvolleys</div></div>
 </body>
 </html>
