--- a/training/heimtraining.html
+++ b/training/heimtraining.html
@@ -25,7 +25,7 @@ div.h2 {
   font-size: 3.2em;
 }
 div.h3 {
-  font-size: 2.8em;
+  font-size: 2.7em;
 }
 table.ov, table.ov tr, table.ov tr > th, table.ov tr > td {
   font-size: 1.5em;
@@ -34,6 +34,7 @@ table.ov, table.ov tr, table.ov tr > th, table.ov tr > td {
 }
 table.ov tr > th, table.ov tr > td {
   padding: 4px 5px 4px 5px;
+  white-space: nowrap;
 }
 table.ov tr > th {
   font-weight: bold;
@@ -62,18 +63,31 @@ table.ov tr:nth-of-type(2n + 1) > td {
 <div class="h1">Heimtraining II</div>
 
 <table class="ov" cellpadding="0" cellspacing="0">
-  <tr><th>Mo</th><th>Di</th><th>Do</th><th>Fr</th><th>&nbsp;</th></tr>
-  <tr><td colspan="4">Aufwärmen - Laufen, Radfahren + Laufen auf Linie</td><td>20min</td></tr>
-  <tr><td>Jonglieren</td><td>Balancieren</td><td>Jonglieren</td><td>Balancieren</td><td>10min</td></tr>
-  <tr><td>Kräftigung 1</td><td>Kräftigung 2</td><td>Kräftigung 1</td><td>Kräftigung 2</td><td>20min</td></tr>
-  <tr><td colspan="4">Technik: Angriff - Wurf, Grundtechnik - Pritschen + Baggern</td><td>2x15min</td></tr>
-  <tr><td colspan="4">Abschluss - Laufen, Radfahren</td><td>25min</td></tr>
-  <tr><td colspan="4">Beobachten und Bewerten</td><td>15-30min</td></tr>
+  <tr><th>Mo</th><th>Di</th><th>Do</th><th>Fr</th><th>&nbsp;</th><th>&nbsp;</th></tr>
+  <tr><td colspan="4">Aufwärmen - Laufen, Radfahren + Laufen auf Linie</td><td>20min</td><td>Einleitung</td></tr>
+  <tr><td>Jonglieren</td><td>Balancieren</td><td>Jonglieren</td><td>Balancieren</td><td>10min</td><td>Geschicklichkeit</td></tr>
+  <tr><td>Kräftigung 1</td><td>Kräftigung 2</td><td>Kräftigung 1</td><td>Kräftigung 2</td><td>20min</td><td>Kräftigung</td></tr>
+  <tr><td colspan="4">Technik: Angriff - Wurf, Grundtechnik - Pritschen + Baggern</td><td>2x15min</td><td>Technik</td></tr>
+  <tr><td colspan="4">Abschluss - Laufen, Radfahren</td><td>25min</td><td>Abschluss</td></tr>
+  <tr><td colspan="4">Beobachten und Bewerten</td><td>15-30min</td><td>Technik + Hirn</td></tr>
 </table>
 <br><br>
 
 <div class="h2">Einleitung</div>
 <p>Radfahren, Laufen, Heimtrainer, dazu Laufen auf Linie(siehe Geschicklichkeit)</p>
+
+<div class="h2">Geschicklichkeit</div>
+<div class="h3">Jonglieren</div>
+<p>1-3 Bälle, je nach Können (Infos dazu folgen)</p>
+
+<div class="h3">Balancieren</div>
+<p>Besenstiel oder Ast oder ähnliches</p>
+
+<div class="h3">Laufen entlang einer Linie/Teppichrand/Schnur/…</div>
+<p>(~5min, ins Aufwärmen integrieren)</p>
+<p>* ein Fuß links, ein Fuß rechts, hin- und hertreten<br>
+* überkreuzen - linker Fuß rechts, rechter Fuß links<br>
+* beidbeining hin- und herspringen</p>
 
 <div class="h2">Kräftigung</div>
 <div class="h3">1. Theraband mit Jenny</div>
@@ -121,10 +135,10 @@ rechte Hand wirft und fällt zum linken Oberschenkel, rechter Fuss kann etwas na
 
 <div class="h3">gegenseitiges Beobachten</div>
 <p>jedes Training einige Würfe mit dem Handy aufnehmen, einen Wurf auswählen und vor dem Trainingstermin(19:00) in die Gruppe schicken<br>
-um 19:00 sollte jede die Würfe der anderen anschauen und bewerten<br>
-ab 19:30 die Bewertungen in die Gruppe schicken und vergleichen, von mir kommt dann auch ein Kommentar<br>
-3 Dinge beschreiben, die positiv auffallen + ein Vorschlag, was und wenn möglich wie es besser gemacht werden kann<br>
-Alles, was an Videos in die Gruppe kommt, muss auch dort bleiben -&gt; niemand darf ein Video weiterschicken oder herumzeigen!<br>
+um 19:00 schauts du dir die Würfe der anderen an und bewertest<br>
+ab 19:30 schickts du die Bewertungen in die Gruppe vergleichst was dir aufgefallen ist und was den anderen, von mir kommt dann auch ein Kommentar<br>
+Beschreibe 3 Dinge, die dir positiv aufgefallen sind und mache einen Vorschlag, was und wenn möglich wie es besser gemacht werden kann</p>
+<p><b>Alles, was an Videos in die Gruppe kommt, muss auch dort bleiben -&gt; niemand darf ein Video weiterschicken oder herumzeigen!</b><br>
 Ausnahme: bei Minderjährigen haben Eltern das Recht am Handy nachzuschauen, was dort drauf ist.</p>
 
 <div class="h3">Pritschen und Baggern geg. Mauer</div>
