--- a/training/zeiten_a.html
+++ b/training/zeiten_a.html
@@ -37,6 +37,7 @@ div.h2 {
 
 <div id="content_container">
 <div class="h1">Trainingsplan (pro Woche)</div>
+<div class="h1">Bis auf Weiteres ausgesetzt.</div>
 <p>4x Training<br>
 Mo: 19:00-21:00, MS Brückl<br>
 Di: 19:00-21:00, MS Brückl<br>
@@ -45,6 +46,7 @@ Fr: 19:00-21:00, MS Brückl<br>
 <br>
 pro ausgelassenem Training: Heimtraining<br>&nbsp;</p>
 <p><b>Wer krank ist, muss Pause machen!</b><br>&nbsp;</p>
+<div class="h1">Bis auf Weiteres ausgesetzt.</div>
 </div>
 
 <div id="footer">Brückl Hotvolleys<div>Brückl Hotvolleys</div></div>
