--- a/training/zeiten_b.html
+++ b/training/zeiten_b.html
@@ -37,12 +37,14 @@ div.h2 {
 
 <div id="content_container">
 <div class="h1">Trainingsplan (pro Woche)</div>
+<div class="h1">Bis auf Weiteres ausgesetzt.</div>
 <p>3x Training<br>
 Di: 16:45-18:45, MS Brückl<br>
 Do: 16:45-18:45, MS Brückl<br>
 Fr: 16:45-18:45, MS Brückl<br>
 <br>&nbsp;</p>
 <p><b>Wer krank ist, muss Pause machen!</b><br>&nbsp;</p>
+<div class="h1">Bis auf Weiteres ausgesetzt.</div>
 </div>
 
 <div id="footer">Brückl Hotvolleys<div>Brückl Hotvolleys</div></div>
