--- a/training/heimtraining16.html
+++ b/training/heimtraining16.html
@@ -52,29 +52,28 @@ table.ov tr:nth-of-type(2n + 1) > td {
 <body>
 <div id="header">
   <div class="left">
-  <a href="/ov.html#heimtraining"><img src="/image/bhv1.gif"/></a>
-  <div>Heimtraining II</div>
+  <a href="/ov.html#heimtraining16"><img src="/image/bhv1.gif"/></a>
+  <div>Heimtraining</div>
   </div><div class="right">
-  <a href="/ov.html#heimtraining"><img src="/image/bhv1.gif"/></a>
+  <a href="/ov.html#heimtraining16"><img src="/image/bhv1.gif"/></a>
   </div>
 </div>
 
 <div id="content_container">
-<div class="h1">Heimtraining II</div>
+<div class="h1">Heimtraining</div>
 
 <table class="ov" cellpadding="0" cellspacing="0">
-  <tr><th>Mo</th><th>Di</th><th>Do</th><th>Fr</th><th>&nbsp;</th><th>&nbsp;</th></tr>
-  <tr><td colspan="4">Aufwärmen - Laufen, Radfahren + Laufen auf Linie</td><td>20min</td><td>Einleitung</td></tr>
-  <tr><td>Jonglieren</td><td>Balancieren</td><td>Jonglieren</td><td>Balancieren</td><td>10min</td><td>Geschicklichkeit</td></tr>
-  <tr><td>Kräftigung 1</td><td>Kräftigung 2</td><td>Kräftigung 1</td><td>Kräftigung 2</td><td>20min</td><td>Kräftigung</td></tr>
-  <tr><td colspan="4">Technik: Angriff - Wurf, Grundtechnik - Pritschen + Baggern</td><td>2x15min</td><td>Technik</td></tr>
-  <tr><td colspan="4">Abschluss - Laufen, Radfahren</td><td>25min</td><td>Abschluss</td></tr>
-  <tr><td colspan="4">Beobachten und Bewerten</td><td>15-30min</td><td>Technik + Hirn</td></tr>
+  <tr><th>Di</th><th>Do</th><th>Fr</th><th>&nbsp;</th><th>&nbsp;</th></tr>
+  <tr><td colspan="3">Aufwärmen - Laufen, Radfahren, o.ä.</td><td>20min</td><td>Einleitung</td></tr>
+  <tr><td>Jonglieren</td><td>Balancieren</td><td>Jonglieren</td><td>10min</td><td>Geschicklichkeit</td></tr>
+  <tr><td>Kräftigung</td><td>Kräftigung</td><td>Kräftigung</td><td>20min</td><td>Kräftigung</td></tr>
+  <tr><td colspan="3">Technik: Angriff - Wurf, Grundtechnik - Pritschen + Baggern</td><td>2x15min</td><td>Technik</td></tr>
+  <tr><td colspan="3">Beobachten und Bewerten</td><td>15min</td><td>Technik + Hirn</td></tr>
 </table>
 <br><br>
 
 <div class="h2">Einleitung</div>
-<p>Radfahren, Laufen, Heimtrainer, dazu Laufen auf Linie(siehe Geschicklichkeit)</p>
+<p>Radfahren, Laufen, Heimtrainer, oder Ähnliches</p>
 
 <div class="h2">Geschicklichkeit</div>
 <div class="h3">Jonglieren</div>
@@ -82,22 +81,15 @@ table.ov tr:nth-of-type(2n + 1) > td {
 
 <div class="h3">Balancieren</div>
 <p>Besenstiel oder Ast oder ähnliches<br>
-Wer hat kann auch eine Slackline verwenden...</p>
-
-<div class="h3">Laufen entlang einer Linie/Teppichrand/Schnur/…</div>
-<p>(~5min, ins Aufwärmen integrieren)</p>
-<p>* ein Fuß links, ein Fuß rechts, hin- und hertreten<br>
-* überkreuzen - linker Fuß rechts, rechter Fuß links<br>
-* beidbeining hin- und herspringen</p>
+Wer hat kann auch eine Slackline verwenden...<br>
+Einfach auf etwas gehen, nicht zu hoch, damit beim Herunterfallen nichts passiert.</p>
 
 <div class="h2">Kräftigung</div>
-<div class="h3">1. Theraband mit Jenny</div>
-
-<div class="h3">2. Kräftigung 2x 11 x 20 (ähnlich wie bisher)</div>
+<div class="h3">Kräftigung 2x 11 x 15 (so wie bisher)</div>
 
 <p><b>(Damen-)Liegestütz</b><br>
 gestreckter Körper<br>
-tw. auf Ball, tw. auf den Fingern<br>
+tw. auf den Fingern<br>
 <b>Sit-Ups</b><br>
 untere Rücken bleibt immer am Boden,<br>
 Schulterblätter immer in der Luft<br>
@@ -111,9 +103,9 @@ Hintern ruhig, Ellbogen abbiegen, auch auf den Fingern versuchen</p>
 Ferse am Boden, Knie bleiben hinter den Zehen, 90° Kniewinkel ist genug (keine Tiefkniebeugen)<br>
 immer auf weichem Untergrund: Polster, Teppich, Decke, alter umgedrehter Schuh (ev. Tennisball im Schuh)<br>
 tw. einbeinig, tw. mit geschlossenen Augen<br>
-<b>Blocksprünge als Hock-Wechsel-Sprünge</b><br>
-Liegestützstellung - Anhocken - Blocksprung - Hocke - Liegestützstellung<br>
-bes. Vorsicht bei der Armführung zum Block: zuerst die Finger nach oben, dann erst Sprung mit ruhiger Armstreckung (kein Schlagen)<br>
+<b>Blocksprünge</b><br>
+vor einer Mauer oder einem Kasten, eine Fusslänge Abstand halten - Absprung und Landung<br>
+ruhige Armführung zum Block: zuerst die Finger nach oben, dann erst Sprung mit ruhiger Armstreckung (kein Schlagen)<br>
 <b>Oberschenkelrückseite (Beckenlift - Hinternheber)</b><br>
 gestrecktes Bein bleibt ruhig<br>
 (keine Klappmesser!)</p>
@@ -122,20 +114,17 @@ gestrecktes Bein bleibt ruhig<br>
 vorwärts, rechts, links, rückwärts<br>gestreckter Körper - kein Hüftknick, keine Berge<br>
 langsam zählen, oder Timer am Handy</p>
 
-<p><b>Alle, die spezielle Übungen haben, ersetzen Teile oder Alles durch diese Übungen!<br>
-(mit Trainer absprechen)</b></p>
-
 <div class="h2">Technik</div>
 <div class="h3">Angriff -&gt; Tennisballwurf</div>
 <p>indirekt geg. Mauer (Boden, Mauer), Abbpraller fangen, falls nicht möglich - Plane/Leintuch/… vom Balkon hängen und dagegen werfen<br>
 Armschwung nach oben(Stirnhöhe)<br>
-linke Hand zielt<br>
+linke Hand zielt - Handfläche nach innen<br>
 rechte Hand nach außen drehen, und mit hohem Ellebogen zurückführen, dabei ein Schritt nach vorne(links)<br>
 linke Hand fällt zum rechten Oberschenkel<br>
 rechte Hand wirft und fällt zum linken Oberschenkel, rechter Fuss kann etwas nachgezogen werden, muss aber hinten bleiben</p>
 
 <div class="h3">gegenseitiges Beobachten</div>
-<p>jedes Training einige Würfe mit dem Handy aufnehmen, einen Wurf auswählen und vor dem Trainingstermin(19:00) in die Gruppe schicken<br>
+<p>jedes Training einige Würfe mit dem Handy aufnehmen, einen Wurf auswählen und vor dem Trainingstermin(19:00) in die U16 Gruppe schicken<br>
 um 19:00 schauts du dir die Würfe der anderen an und bewertest<br>
 ab 19:30 schickts du die Bewertungen in die Gruppe vergleichst was dir aufgefallen ist und was den anderen, von mir kommt dann auch ein Kommentar<br>
 Beschreibe 3 Dinge, die dir positiv aufgefallen sind und mache einen Vorschlag, was und wenn möglich wie es besser gemacht werden kann</p>
@@ -143,15 +132,12 @@ Beschreibe 3 Dinge, die dir positiv aufgefallen sind und mache einen Vorschlag, 
 Ausnahme: bei Minderjährigen haben Eltern das Recht am Handy nachzuschauen, was dort drauf ist.</p>
 
 <div class="h3">Pritschen und Baggern geg. Mauer</div>
-<p>(einige dürfen auch paarweise oder zu dritt spielen)<br>
-jedes Training 15min Grundtechnik<br>
-<b>Aufspielerinnnen:</b> Schwerpunkt Daumen<br>
+<p>jedes Training 15min Grundtechnik<br>
 <b>Pritschen:</b> kurz mit einem schwereren Ball (Fussball, Basketball, sehr leichter Medizinball - max 1kg, besser leichter)<br>
 dann mit einem Volleyball (oder einem anderen leichten Ball) weitermachen.<br>
-<b>Bagger:</b> Schwerpunkt ruhige Arme(kurz einen zweiten Ball unter das Kinn klemmen), sonst mit ruhigen Armen den Ball geg. die Mauer 'schieben'.</p>
+<b>Bagger:</b> Schwerpunkt ruhige Arme(kurz einen zweiten Ball unter das Kinn klemmen), sonst mit ruhigen Armen den Ball geg. die Mauer 'schieben'</p>
 
-<div class="h2">Abschluss</div>
-<p>Radfahren, Laufen, Heimtrainer</p>
+<p><b>Viel Spass - der Erfolg wird von selbst kommen!</b></p>
 </div>
 <div id="footer">Brückl Hotvolleys<div>Brückl Hotvolleys</div></div>
 </body>
