--- a/todos.html
+++ b/todos.html
@@ -44,7 +44,7 @@ function init() {
 
 /**
  * Try to load the todos.
- * @return {void}
+ * @return {bool} Ok or nok.
  */
 function loadTodos() {
   var key = window.bhv.request.utils.getKey(), query, check,
