--- a/ov.html
+++ b/ov.html
@@ -188,7 +188,9 @@ function init() {
               'schedule_br3g_21', 'results_br3g_21', 'statistics_br3g_21', 'standings_br3g_21', 'players_br3g_21'],
     'br2_21': ['schedule_br2g_21', 'results_br2g_21', 'statistics_br2g_21', 'standings_br2g_21', 'players_br2g_21'],
     'br1_21': ['herzhirn_21', 'training_a', 'training_a20', 'tagebuch_a', 'system1',
-               'schedule_br1g_21', 'results_br1g_21', 'statistics_br1g_21', 'standings_br1g_21', 'players_br1g_21',
+               'schedule_br1sp_21', 'results_br1sp_21', 'standings_br1sp_21', 'players_br1sp_21',
+               'schedule_br1cup_21', 'results_br1cup_21',
+               'schedule_br1g_21', 'results_br1g_21', 'statistics_br1g_21', 'standings_br1g_21',
                'zeiten_a', 'heimtraining', 'videofeedback'],
 
     // 'archive': ...
@@ -453,7 +455,7 @@ function removeClass(elem, clazz) {
         <a id="standings_br1sp_21" href="standings.html?key=br1sp_21"><h3>Tabelle</h3></a>
         <a id="players_br1sp_21" href="players.html?key=br1sp_21"><h3>Spielerinnen</h3></a>
 
-        <a id="schedule_br1sp_21" href="schedule.html?key=br1cup_21"><h3>Spieltermine (Cup)</h3></a>
+        <a id="schedule_br1cup_21" href="schedule.html?key=br1cup_21"><h3>Spieltermine (Cup)</h3></a>
         <a id="results_br1cup_21" href="results.html?key=br1cup_21"><h3>Ergebnisse (Cup)</h3></a>
 
         <a id="standings_br1g_21" href="standings.html?key=br1g_21"><h3>Tabelle (Herbst)</h3></a>
